# tinkering

./: .env.example  .gitignore  README.md  pyproject.toml  steps.md
src/cache/openthoughts_stats/: all_stats.json  filter_options.json
src/learning_tinker/: _2_gsm8k_manual.py
src/scripts/: determinism_debugging.py  sample_e2b.py  summarize_determinism.py  upload_subsets_to_hf.py
src/tinkering/: _1_gsm8k_manual.py  _2_gsm8k_manual.py  _3_comparison_chat.py
src/tinkering/exploring_openthoughts/: common.py  filters.py  main.py  stats.py
src/tinkering/tinker_basics/: _1_gsm8k_manual.py  _2_eval_on_chk.py
src/tinkering/tinker_openthoughts/: common.py  datasets.py  datasets.sh  evals.py  run.sh  train.py
src/tinkering/tinker_openthoughts/data/: generator.py  run.sh
src/tinkering/tinker_openthoughts/evals/: aime.py  gpqad.py  lcb_utils.py  livecodebench.py  nll.py  view.py
src/tinkering/tinker_openthoughts/experiments/: 1_source_rankings.sh  2_curriculum_methods.sh  3_mixtures.sh  4_lora_rank_ablation.sh
